This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Minor issues in reported Syntax errors
Type: behavior Stage: resolved
Components: Parser Versions: Python 3.11, Python 3.10
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: lys.nikolaou, mdartiailh, miss-islington, pablogsal
Priority: normal Keywords: patch

Created on 2022-04-04 11:01 by mdartiailh, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 32302 merged mdartiailh, 2022-04-04 11:03
PR 32334 merged mdartiailh, 2022-04-05 14:59
Messages (3)
msg416662 - (view) Author: Matthieu Dartiailh (mdartiailh) * Date: 2022-04-04 11:01
Hi,
While working on Pegen I noticed that:
- the invalid_arguments rule would non point to the full generator expression in its second and fifth alternatives
- when reporting an indentation error after a bare except, the error is actually a SyntaxError

I will open a PR shortly to address both since the changes are quite minimal IMO.
msg416777 - (view) Author: Pablo Galindo Salgado (pablogsal) * (Python committer) Date: 2022-04-05 13:47
New changeset aa0f056a00c4bcaef83d729e042359ddae903382 by Matthieu Dartiailh in branch 'main':
bpo-47212: Improve error messages for un-parenthesized generator expressions (GH-32302)
https://github.com/python/cpython/commit/aa0f056a00c4bcaef83d729e042359ddae903382
msg416787 - (view) Author: miss-islington (miss-islington) Date: 2022-04-05 16:21
New changeset 94609e3192f15636c760a48c4c1c2c236fac3217 by Matthieu Dartiailh in branch '3.10':
[3.10] Backport bpo-47212 (GH-32302) to Python 3.10 (GH-32334)
https://github.com/python/cpython/commit/94609e3192f15636c760a48c4c1c2c236fac3217
History
Date User Action Args
2022-04-11 14:59:58adminsetgithub: 91368
2022-04-05 16:29:53AlexWaygoodsetstatus: open -> closed
resolution: fixed
stage: patch review -> resolved
2022-04-05 16:21:58miss-islingtonsetnosy: + miss-islington
messages: + msg416787
2022-04-05 14:59:44mdartiailhsetpull_requests: + pull_request30391
2022-04-05 13:47:24pablogsalsetmessages: + msg416777
2022-04-04 11:03:48mdartiailhsetkeywords: + patch
stage: patch review
pull_requests: + pull_request30364
2022-04-04 11:01:55mdartiailhcreate