bpo-47212: Improve error messages for un-parenthesized generator expressions (GH-32302)

(cherry picked from commit aa0f056a00c4bcaef83d729e042359ddae903382)

# Conflicts:
#	Grammar/python.gram
#	Parser/action_helpers.c